test/errors/dict/key_error.np
d = {1: 2}
x = d[2]
